# playonpaper

./: .flake8  .gitignore  craco.config.js  docker-compose.yml  package-lock.json  package.json  tsconfig.json
client/: .prettierignore  package-lock.json  package.json
client/src/: App.tsx
public/: index.html
server/: .env.sample  package-lock.json  package.json  pyproject.toml  tsconfig.json  tslint.json  webpack.config.js
server/common/: models.py
server/players/: models.py
server/src/: index.ts
server/src/domain/: enum.ts  models.ts  states.ts  workers.ts
src/: App.tsx  container.ts  environment.ts  index.css  index.tsx  routes.tsx
src/assets/: index.ts
src/components/: index.ts
src/components/Button/: index.tsx
src/components/Container/: index.tsx
src/components/CopyButton/: index.tsx
src/components/ErrorState/: index.tsx
src/components/Grid/: index.tsx
src/components/Icon/: index.tsx
src/components/IconButton/: index.tsx
src/components/LoadingState/: index.tsx
src/components/Row/: index.tsx
src/components/Title/: index.tsx
src/context/: ContainerContext.ts  index.ts
src/games/: index.ts  mappers.ts  match-factory.ts  match-root-store.ts  match-service.ts  match-store.ts  match-view-model.ts  types.ts
src/games/Games/: games-hook.ts  index.tsx
src/games/Match/: index.tsx  match-hook.ts
src/services/: api-client.ts  api-service.ts  game-service.ts  index.ts
src/stores/: chat-store.ts  game-store.ts  index.ts
src/util/: clipboard.ts  crud-store.ts  identifiable-map.ts  index.ts  string-util.ts
(+17 files in other folders)
