[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["gflores05 <gabriel.flores0503@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.1"
uvicorn = {extras = ["standar"], version = "^0.13.4"}

[tool.poetry.dev-dependencies]
pre-commit = "^2.13.0"
flake8 = "^3.9.2"
black = "^21.5b1"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
